avoid having communities menu overlap browser chrome

--- a/css/layout.less
+++ b/css/layout.less
@@ -172,10 +172,6 @@ nav {
       li:last-child {
         padding-bottom: 50px;
       }
-
-      .mobile({
-        max-height: 80vh;
-      });
     }
 
     .join-or-start {
